--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- OPEN GRAPH -->
     <meta property="og:title" content="Sistema Solar">
     <meta property="og:description" content="Proyecto de sistema solar interactivo, creado por: Reinaldo Polanco y Adrian Gomez">
-    <meta property="og:img" content="images/image-project.png">
-    <meta property="og:img:alt" content="planeta">
+    <meta property="og:image" content="images/image-project.png">
+    <meta property="og:image:alt" content="planeta">
 
     <title>Sistema Solar</title>
     <link rel="icon" href="/images/image-project.png">
